注入形式更换